# labelmeplus

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  app.cpp  app.h  config.h  imgviz.hpp  init.h  label_file.cpp  label_file.h  main.cpp  opener.c  opener.h  os.c  os.h  shape.cpp  shape.h  version.h.in
.github/workflows/: build-multi-platform.yml
config/: config.cpp  config.h
utils/: image.cpp  io.cpp  qt.cpp  shape.cpp  utils.h
widgets/: brightness_contrast_dialog.cpp  brightness_contrast_dialog.h  canvas.cpp  canvas.h  escapable_qlist_widget.cpp  escapable_qlist_widget.h  file_dialog_preview.cpp  file_dialog_preview.h  label_dialog.cpp  label_dialog.h  label_list_widget.cpp  label_list_widget.h  tool_bar.cpp  tool_bar.h  unique_label_qlist_widget.cpp  unique_label_qlist_widget.h  zoom_widget.cpp  zoom_widget.h
